fix: search bar clear button spacing on desktop dimensions

--- a/src/components/search-bar/SearchBar.css
+++ b/src/components/search-bar/SearchBar.css
@@ -54,6 +54,7 @@
   justify-content: center;
   align-items: center;
   height: 100%;
+  margin-left: auto;
   padding: 0 1rem;
 
   border-radius: 0 var(--border-radius-rounded) var(--border-radius-rounded) 0;
